--- a/index.html
+++ b/index.html
@@ -10,24 +10,24 @@
   
   <link rel="stylesheet" href="style.css">
   
-  <title>Jogo da Adivinhação</title>
+  <title>GUESS THE NUMBER GAME</title>
 </head>
 
 <body>
   <main>
     <div class="screen1">
-      <h1>Jogo da Adivinhação</h1>
-      <p>Adivinhe um número entre 0 e 10</p>
+      <h1>Guess the number</h1>
+      <p>Pick a natural number between 0 and 10</p>
   
       <form >
         <input id="inputNumber" type="number">
-        <button id="btnTry">Tentar</button>
+        <button id="btnTry">Check</button>
       </form>
     </div>
     
     <div class="screen2 hide">
       <h2>Acertou em 3 vezes</h2>
-      <button id="btnReset">Jogar novamente</button>
+      <button id="btnReset">Play again</button>
     </div>
 
   </main>
